-The Crisis can no longer be stopped by releasing a buffer state and granting it provinces
-Byzantium will no longer get or lose monarch points through Purple Phoenix events while they are an Eastern Monarchy
-The Seljuks will raid Byzantiums provinces already before the Crisis
-It is no longer possible to take the Russian Crown while having the Eastern Monarchy government
-The Center of Revolution will now spread the Revoution to 7 provinces simultaneously
-Players now get recurring events to deal with the rise of the Italian Communes after the event for them to start spawning has fired
-Slightly upped the rate at which advisor cost increases
-Nerfed unrest modifiers given from several missions

#Fixes
-Small fixes for the following mission trees: Flanders, Russia, Pisa, Mazovia, Switzerland, Provence, Sicily, Lorraine, Aragon, Altsachsen, Denmark, Outremer, Worms, Poland, Tuscany, Apulia, Austria, Baghdad, Bohemia, Brandenburg, England, Frisia, Normandy, Portugal, Saxony, Toulouse, Venice, Volga Bulgaria, Great Britain, Commonwealth, Spain, Castile/Leon, HRE Theocracy, Greek REL, Horde REL, Albanian REL
-The Baltic Orders should finally, and I mean finally, spawn with proper techs
-Fixed major bug preventing Industrialism from spawning for Rule Britannia owners
-Forming the following nations now properly gives you their missions: Russia (by reforms), Great Britain (diplomatically), Lotharingia (as any tag other than Lorraine), Spain, Aquitaine, Tunis
-Fixed Anglo-Saxon England and Alba losing their original missions when forming Great Britain
-There are no longer two separate decisions to form Dalmatia
-Fixed several issues with the Fragmentation of Poland disaster; it should now end as normal and have two clear outcomes in the ending event
-Refusing a province to become Germanic during the ostsiedlung will no longer cause nationwide unrest
-The Szekely and Szaszok culture events can no longer fire more than once