@@ -784,6 +784,11 @@ investiture_excommunication_m = {
 	church_loyalty_modifier = -0.05
 	imperial_authority = -0.25
 }
+pontifical_reputation = {
+	improve_relation_modifier = 0.25
+	diplomatic_reputation = 1
+	diplomatic_upkeep = 1
+}
 lombard_league_winner = {
 	prestige = 0.5
 	legitimacy = 1
