@@ -180,6 +180,10 @@ country_event = {
 			has_global_flag = investiture_controversy_active
 		}
 		custom_tooltip = incident_investiture_controversy.2.tt
+		add_country_modifier = {
+			name = pontifical_reputation
+			duration = -1
+		}
 		reverse_add_opinion = {
 			who = FROM
 			modifier = opinion_investiture_controversy
@@ -265,6 +269,12 @@ country_event = {
 				who = PAP
 				modifier = opinion_investiture_controversy
 			}
+			PAP = {
+				if = {
+					limit = { has_country_modifier = pontifical_reputation }
+					remove_country_modifier = pontifical_reputation
+				}
+			}
 		}
 	}
 
@@ -304,7 +314,36 @@ country_event = {
 	}
 	
 	mean_time_to_happen = {
-		months = 12
+		months = 24
+		modifier = {
+			factor = 0.75
+			war_score_against = {
+				who = PAP
+				value = 80
+			}
+		}
+		modifier = {
+			factor = 0.75
+			war_score_against = {
+				who = PAP
+				value = 90
+			}
+		}
+		modifier = {
+			factor = 0.75
+			war_score_against = {
+				who = PAP
+				value = 100
+			}
+		}
+		modifier = {
+			factor = 0.5
+			OR = {
+				papacy_active = no
+				NOT = { exists = PAP }
+				PAP = { is_subject = yes }
+			}
+		}
 	}
 
 	immediate = {
@@ -317,6 +356,12 @@ country_event = {
 			reverse_remove_opinion = {
 				who = PAP
 				modifier = opinion_investiture_controversy
+			}
+			PAP = {
+				if = {
+					limit = { has_country_modifier = pontifical_reputation }
+					remove_country_modifier = pontifical_reputation
+				}
 			}
 		}
 	}
