@@ -1524,7 +1524,7 @@
  SIV_ADJ: "Silvisch"
  SPR_ADJ: "Köpenickisch"
  SDE_ADJ: "Stadisch"
- SDL_ADJ: "Nordmarkisch"
+ SDL_ADJ: "Nordmärkisch"
  SYC_ADJ: "Sprewanisch"
  TTO_ADJ: "Tortosanisch"
  TPN_ADJ: "Trapanisch"
