@@ -50,6 +50,8 @@
  EST_VAL_PATARIA_COUP: "Pataria Coup"
  investiture_controversy_m: "Investiture Controversy"
  desc_investiture_controversy_m: "During the 11th and 12th centuries, the imperial authority was weakened by Papal reforms for several times. The Emperor's anti-papal policy led to his excommunication and various rebellions of imperial princes."
+ pontifical_reputation: "Pontifical Reputation"
+ desc_pontifical_reputation: "The Pope is the most respected man in all of Europe. We can easily weave a diplomatic network that operates in his favor."
  investiture_excommunication_m: "Excommunicated by the Pope"
  desc_investiture_excommunication_m: "The Pope punished the anti-Roman acts of our ruler with excommunication - exclusion from the Catholic Church."
  opinion_investiture_controversy: "Investiture Controversy"
