@@ -48,6 +48,8 @@
  conquest_imperial_supremacy_desc: "Kriegsziel ist die Eroberung der Provinz mit der Hauptstadt von $COUNTRY$."
  IMPERIAL_SUPCREMACY_WAR_NAME: "$ORDER$$FIRST$ Krieg um die kaiserliche Überlegenheit"
  EST_VAL_PATARIA_COUP: "Putsch der Pataria"
+ pontifical_reputation: "Pontifikale Reputation"
+ desc_pontifical_reputation: "Der Papst ist der am meisten angesehenste Mann in ganz Europa. Wir können mit Leichtigkeit ein diplomatisches Netzwerk weben, das ihm zu Gunsten arbeitet."
  investiture_controversy_m: "Investiturstreit"
  desc_investiture_controversy_m: "Im 11. und 12. Jahrhundert wurde die kaiserliche Autorität durch päpstliche Reformen mehrfach geschwächt. Die antipäpstliche Politik des Kaisers führte zu seiner Exkommunikation und verschiedenen Rebellionen kaiserlicher Fürsten."
  investiture_excommunication_m: "Vom Papst exkommuniziert"
