@@ -49,6 +49,7 @@
 -Byzantium will no longer get or lose monarch points through Purple Phoenix events while they are an Eastern Monarchy
 -The Seljuks will raid Byzantiums provinces already before the Crisis
 -It is no longer possible to take the Russian Crown while having the Eastern Monarchy government
+-Buffed the Papacy for a bit during the Investiture Controversy
 -The Center of Revolution will now spread the Revoution to 7 provinces simultaneously
 -Players now get recurring events to deal with the rise of the Italian Communes after the event for them to start spawning has fired
 -Slightly upped the rate at which advisor cost increases
